bugfix: add fix for failing navbar animation and ui, add fixes for buttons behaviour on mobile view

--- a/ui/NavList/NavList.module.scss
+++ b/ui/NavList/NavList.module.scss
@@ -1,6 +1,17 @@
 @import '../../styles/mixins';
 @import '../../styles/variables';
 
+@include keyframe(fadeInLeft) {
+  0% {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
 .list {
   transform: translate(9999px);
   opacity: 0;
@@ -23,4 +34,11 @@
   justify-content: space-between;
   align-items: center;
   flex: 100%;
+}
+
+.animated {
+  @include animation(0, 1s, fadeInLeft, ease);
+  @include mQ($ipadPro) {
+    animation: none;
+  }
 }
